--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ola Mundo</title>
+    <title>Ola Munda</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>teste</h1>
+
+    <div id="01"></div>
+    <div id="02"></div>
+    <div id="03"></div>
 </body>
 </html>
